# voices

./: .gitconfig  .gitignore  LICENSE  README.md  codeanalysis.md  comprehensive_guide.md  package.json  prompt.txt  pyproject.toml  requirements.txt  setup_env.py  start.txt  webpack.config.js
Planning/: checklist.md  development_plan.md  guidelines.md  handbook.md  steps.md
public/: index.html  manifest.json
public/scripts/: renderer.js
public/styles/: audio-visualization.css  feedback.css  integration-tester.css  main.css  model-comparison.css  processing-config.css
python/: app.py
src/: main.js  preload.js
src/backend/: __init__.py
src/backend/core/: __init__.py
src/backend/core/communication/: __init__.py  audio_visualization_handlers.py  feedback_handlers.py  integration_test_handlers.py  metadata_handlers.py  model_comparison_handlers.py  processing_config_handlers.py  register_handlers.py  server.py
src/backend/core/config/: README.md  __init__.py  cli.py  config_manager.py  defaults.py  hardware_detection.py  schema.py
src/backend/core/config/examples/: __init__.py  config_example.py
src/backend/core/queue/: README.md  __init__.py  cli.py  priority.py  queue_manager.py  resource_manager.py  task.py  worker.py
src/backend/core/queue/examples/: __init__.py  queue_example.py
src/backend/processing/audio/: README.md  __init__.py  cli.py  io.py  test_audio_io.py
src/backend/processing/audio/examples/: __init__.py  audio_io_example.py
src/backend/processing/experiment/: __init__.py  benchmarking.py  datasets.py  framework.py  metrics.py  visualization.py
src/backend/processing/models/: README.md  abstraction.py  test_abstraction.py
src/backend/processing/models/demucs/: README.md  __init__.py  cli.py  model.py  test_demucs.py  utils.py
src/backend/processing/models/examples/: abstraction_example.py
src/backend/processing/models/svoice/: README.md  __init__.py  (+4 more)
src/backend/processing/pipeline/: __init__.py  cli.py  components.py  utils.py
src/backend/processing/registry/: __init__.py  cli.py  examples.py  integration.py  integration_tests.py  model_adapters.py  model_registry.py  model_selector.py  run_integration_tests.py  tests.py
src/backend/storage/database/: README.md  README_speaker_management.md  __init__.py  cli.py  db_manager.py  feedback_manager.py  feedback_models.py  migrations.py  models.py  speaker_cli.py  speaker_manager.py  test_speaker_manager.py
src/backend/storage/files/: README.md  __init__.py  cli.py  file_manager.py  test_file_manager.py
src/backend/storage/metadata/: README.md  __init__.py  cli.py  metadata_manager.py  test_metadata_manager.py
src/frontend/: index.js
src/frontend/components/: App.js
src/frontend/components/audio/: AudioVisualization.js
src/frontend/components/feedback/: FeedbackDashboard.js  FeedbackForm.js  FeedbackList.js
src/frontend/components/layout/: Footer.js  Header.js
src/frontend/components/metadata/: MetadataEditor.js  MetadataManagement.js  MetadataSearch.js
src/frontend/components/models/: ModelComparison.js
src/frontend/components/pages/: Dashboard.js  MetadataManagement.js
src/frontend/components/processing/: ProcessingConfig.js
src/frontend/components/testing/: IntegrationTester.js
src/frontend/controllers/: MetadataBridge.js  PythonBridge.js
src/frontend/styles/: App.css
test_output/: test_audio.txt
test_output/mock_models/demucs/: config.yaml
test_output/mock_models/svoice/: config.yaml
test_output/models/demucs/: config.yaml
test_output/models/svoice/: config.yaml
(+8 files in other folders)
