[tool.poetry]
name = "voices"
version = "0.1.0"
description = "A multi-modal audio/video processing application that isolates voices from audio/video files, identifies speakers, and organizes the processed content."
authors = ["Voices Project Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.0"
torchaudio = "^2.0.0"
demucs = "^4.0.0"
librosa = "^0.10.0"
numpy = "^1.24.0"
scipy = "^1.10.0"
fastapi = "^0.100.0"
uvicorn = "^0.23.0"
pydantic = "^2.0.0"
ffmpeg-python = "^0.2.0"
pyannote-audio = "^2.1.1"
silero = "^0.4.1"
onnxruntime = "^1.15.0"
onnxruntime-gpu = "^1.15.0"
soundfile = "^0.12.1"
matplotlib = "^3.7.0"
pandas = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pylint = "^2.17.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"