[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voices-backend"
version = "0.1.0"
description = "Python backend for Voices audio processing application"
readme = "README.md"
authors = [
    {name = "Voices Team", email = "info@voices-app.com"}
]
license = {text = "MIT"}
requires-python = ">=3.9,<3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]
dependencies = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.1",
    "matplotlib>=3.7.0",
    "pydub>=0.25.1",
    "pyaudio>=0.2.13",
    "scikit-learn>=1.2.0",
    "pandas>=2.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
]
gpu = [
    "torch>=2.1.0+cu118",
    "torchaudio>=2.1.0+cu118",
]
svoice = [
    "asteroid>=0.6.0",
]
demucs = [
    "demucs>=4.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["torch.*", "torchaudio.*", "librosa.*", "soundfile.*", "matplotlib.*", "pydub.*", "pyaudio.*", "sklearn.*", "pandas.*", "tqdm.*", "yaml.*", "sqlalchemy.*", "alembic.*"]
ignore_missing_imports = true